@@ -11,11 +11,11 @@ R_PAPERSIZE=${R_PAPERSIZE-'@R_PAPERSIZE@'}
 ## Default print command
 R_PRINTCMD=${R_PRINTCMD-'@R_PRINTCMD@'}
 ## Default TeXMF stuff
-R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEX@'}}
-R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEX@'}}
-R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPS@'}}
-R_MAKEINDEXCMD=${R_MAKEINDEXCMD-${MAKEINDEX-'@MAKEINDEX@'}}
-R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVI@'}}
+R_LATEXCMD=${R_LATEXCMD-${LATEX-'@LATEXCMD@'}}
+R_PDFLATEXCMD=${R_PDFLATEXCMD-${PDFLATEX-'@PDFLATEXCMD@'}}
+R_DVIPSCMD=${R_DVIPSCMD-${DVIPS-'@DVIPSCMD@'}}
+R_MAKEINDEXCMD=${R_MAKEINDEXCMD-${MAKEINDEX-'@MAKEINDEXCMD@'}}
+R_TEXI2DVICMD=${R_TEXI2DVICMD-${TEXI2DVI-'@TEXI2DVICMD@'}}
 R_RD4DVI=${R_RD4DVI-'@R_RD4DVI@'}
 R_RD4PDF=${R_RD4PDF-'@R_RD4PDF@'}
 ## Default zip/unzip commands
